--- a/treatment-options.html
+++ b/treatment-options.html
@@ -3,81 +3,147 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Treatment Options for Hair Loss</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <title>Solutions for Hair Loss</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            padding: 0;
+            color: #333;
+        }
+        h1, h2, h3 {
+            color: #0056b3;
+        }
+        a {
+            color: #0056b3;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .index {
+            margin-bottom: 20px;
+        }
+        .index ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        .index li {
+            margin: 5px 0;
+        }
+        .section {
+            margin-bottom: 40px;
+        }
+    </style>
 </head>
 <body>
-    <!-- Header -->
-    <header>
-        <div class="container">
-            <h1>Treatment Options for Hair Loss</h1>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="treatment-options.html">Treatment Options</a>
-                <a href="survey-link.html">Take the Survey</a>
-                <a href="#medications">Medications</a>
-                <a href="#procedures">Procedures</a>
-                <a href="#lifestyle">Lifestyle Changes</a>
-            </nav>
-        </div>
-    </header>
+    <h1>Solutions for Hair Loss: Exploring Evidence-Based Treatments</h1>
 
-    <!-- Hero Section -->
-    <section class="hero" style="background-image: url('images/treatment-hero.jpg'); background-size: cover; color: white; text-align: center; padding: 50px 0;">
-        <div class="hero-text">
-            <h2>Discover Effective Solutions to Combat Hair Loss</h2>
-            <p>Explore medications, procedures, and lifestyle changes that can help restore your hair and confidence.</p>
-        </div>
-    </section>
+    <p>Hair loss, while common, can be distressing. Fortunately, science offers a variety of solutions to slow, halt, or even reverse hair loss. These options range from medications to surgical procedures, each with its unique mechanisms, success rates, and potential side effects. Below, we delve into these solutions, backed by robust data and research.</p>
 
-    <!-- Medications Section -->
-    <section id="medications" class="content-section" style="padding: 40px 20px;">
-        <div class="container">
-            <h2>Medications</h2>
-            <p>Several FDA-approved medications are available to treat hair loss:</p>
-            <h3>Minoxidil</h3>
-            <p>A topical treatment that promotes hair growth by improving blood flow to the scalp. Suitable for both men and women.</p>
-            <h3>Finasteride</h3>
-            <p>An oral medication that reduces levels of dihydrotestosterone (DHT), preventing hair follicle shrinkage. Primarily used for male-pattern baldness.</p>
-            <h3>Spironolactone</h3>
-            <p>A medication for women that blocks androgen receptors, reducing hair loss caused by hormonal imbalances.</p>
-        </div>
-    </section>
+    <div class="index">
+        <h2>Index</h2>
+        <ul>
+            <li><a href="#medications">1. Medications for Hair Loss</a></li>
+            <li><a href="#non-surgical">2. Non-Surgical Treatments</a></li>
+            <li><a href="#surgical">3. Surgical Options</a></li>
+            <li><a href="#placebo">4. Placebo Comparisons</a></li>
+            <li><a href="#conclusion">5. Conclusion</a></li>
+        </ul>
+    </div>
 
-    <!-- Procedures Section -->
-    <section id="procedures" class="content-section" style="background-color: #f9f9f9; padding: 40px 20px;">
-        <div class="container">
-            <h2>Procedures</h2>
-            <p>Advanced procedures offer long-term solutions for hair restoration:</p>
-            <h3>Hair Transplant Surgery</h3>
-            <p>Follicular unit transplantation (FUT) and follicular unit extraction (FUE) techniques involve relocating hair follicles to thinning areas.</p>
-            <h3>Platelet-Rich Plasma (PRP) Therapy</h3>
-            <p>A non-surgical treatment that uses your blood's platelets to stimulate hair growth and improve follicle health.</p>
-            <h3>Low-Level Laser Therapy (LLLT)</h3>
-            <p>A painless procedure that uses light therapy to enhance cell activity and hair growth.</p>
-        </div>
-    </section>
+    <div class="section" id="medications">
+        <h2>1. Medications for Hair Loss</h2>
+        <h3>A. Minoxidil</h3>
+        <p><strong>How It Works:</strong> Minoxidil is a vasodilator that improves blood flow to hair follicles, prolonging the hair’s growth (anagen) phase.</p>
+        <p><strong>Forms:</strong> Available in 2% and 5% solutions, applied topically to the scalp.</p>
+        <p><strong>Efficacy:</strong>
+            <ul>
+                <li>A <em>48-week clinical trial</em> with 393 men found 5% Minoxidil regrowth was 45% greater than with 2% and 2.6 times higher than with placebo.</li>
+                <li>A <em>1-year study</em> with 381 women reported increased hair density by 13 hairs/cm² with 2% Minoxidil.</li>
+            </ul>
+        </p>
+        <p><strong>Side Effects:</strong>
+            <ul>
+                <li>Common: Scalp irritation, dryness, or itching.</li>
+                <li>Rare: Excessive facial hair growth (in women).</li>
+                <li>Initial shedding during early use, resolving within weeks.</li>
+            </ul>
+        </p>
 
-    <!-- Lifestyle Changes Section -->
-    <section id="lifestyle" class="content-section" style="padding: 40px 20px;">
-        <div class="container">
-            <h2>Lifestyle Changes</h2>
-            <p>Adopting healthy habits can improve overall hair health:</p>
-            <h3>Diet and Nutrition</h3>
-            <p>Consume a balanced diet rich in vitamins, minerals, and proteins to support hair growth.</p>
-            <h3>Stress Management</h3>
-            <p>Practice relaxation techniques like yoga and meditation to minimize stress-induced hair loss.</p>
-            <h3>Scalp Care</h3>
-            <p>Maintain scalp hygiene and use gentle products to avoid irritation and hair breakage.</p>
-        </div>
-    </section>
+        <h3>B. Finasteride</h3>
+        <p><strong>How It Works:</strong> Finasteride blocks 5-alpha reductase, reducing DHT, a key driver of follicular miniaturization.</p>
+        <p><strong>Efficacy:</strong>
+            <ul>
+                <li>A <em>2-year trial</em> reported 83% of users maintained or increased hair density, gaining 182 hairs compared to placebo.</li>
+            </ul>
+        </p>
+        <p><strong>Side Effects:</strong>
+            <ul>
+                <li>Sexual dysfunction reported by 3.8% of users versus 2.1% in placebo groups.</li>
+                <li>Rare: Depression or anxiety, post-finasteride syndrome.</li>
+            </ul>
+        </p>
 
-    <!-- Footer -->
-    <footer style="background-color: #333; color: white; padding: 20px 0; text-align: center;">
-        <div class="container">
-            <p>© 2024 Hair Loss Solutions. All rights reserved.</p>
-        </div>
-    </footer>
+        <h3>C. Dutasteride</h3>
+        <p><strong>How It Works:</strong> Dutasteride inhibits both Type 1 and Type 2 forms of 5-alpha reductase.</p>
+        <p><strong>Efficacy:</strong>
+            <ul>
+                <li>A <em>6-month study</em> found dutasteride increased hair counts by 109 hairs, outperforming finasteride and placebo.</li>
+            </ul>
+        </p>
+        <p><strong>Additional Research:</strong> A study in the <a href="https://ijdvl.com/superiority-of-dutasteride-over-finasteride-in-hair-regrowth-and-reversal-of-miniaturization-in-men-with-androgenetic-alopecia-a-randomized-controlled-open-label-evaluator-blinded-study/">Indian Journal of Dermatology</a> confirmed dutasteride's superiority over finasteride for hair regrowth in men.</p>
+        <p><strong>Side Effects:</strong> Similar to finasteride, with slightly higher incidence of sexual dysfunction.</p>
+    </div>
+
+    <div class="section" id="non-surgical">
+        <h2>2. Non-Surgical Treatments</h2>
+
+        <h3>A. Platelet-Rich Plasma (PRP)</h3>
+        <p><strong>How It Works:</strong> PRP involves extracting the patient’s blood, isolating platelet-rich plasma, and injecting it into the scalp to stimulate follicle activity via growth factors.</p>
+        <p><strong>Efficacy:</strong>
+            <ul>
+                <li>A meta-analysis reported a 33.6 hairs/cm² increase in PRP-treated individuals compared to 8.5 hairs/cm² in placebo groups.</li>
+                <li>A <a href="https://ijdvl.com/efficacy-of-platelet-rich-plasma-in-asians-with-androgenetic-alopecia-a-randomized-controlled-trial/">study in the Indian Journal of Dermatology</a> found significant increases in hair density for men but not for women.</li>
+            </ul>
+        </p>
+        <p><strong>Side Effects:</strong> Minimal, including mild swelling or discomfort at the injection site.</p>
+
+        <h3>B. Low-Level Laser Therapy (LLLT)</h3>
+        <p><strong>How It Works:</strong> Red light lasers stimulate follicles and enhance blood flow.</p>
+        <p><strong>Efficacy:</strong> A 16-week study reported a 39% improvement in hair density for LLLT users.</p>
+        <p><strong>Limitations:</strong> Requires long-term commitment with treatments 2–3 times per week.</p>
+    </div>
+
+    <div class="section" id="surgical">
+        <h2>3. Surgical Options</h2>
+
+        <h3>A. Hair Transplant Surgery</h3>
+        <p><strong>Methods:</strong>
+            <ul>
+                <li>Follicular Unit Transplantation (FUT): Removes a strip of scalp for grafting.</li>
+                <li>Follicular Unit Extraction (FUE): Harvests individual follicles directly.</li>
+            </ul>
+        </p>
+        <p><strong>Efficacy:</strong> Success rates range from 90–95%, with natural and permanent hair growth.</p>
+        <p><strong>Cost:</strong> Ranges from ₹1,00,000–₹3,00,000 ($1,500–$4,000) for 1,500–3,000 grafts in India.</p>
+    </div>
+
+    <div class="section" id="placebo">
+        <h2>4. Placebo Comparisons</h2>
+        <p>All treatments significantly outperformed placebo, demonstrating their effectiveness in combating hair loss:</p>
+        <ul>
+            <li>Minoxidil: 2.6x better regrowth compared to placebo.</li>
+            <li>Finasteride: Net gain of 182 hairs versus placebo.</li>
+            <li>Dutasteride: Net gain of 165 hairs compared to placebo.</li>
+            <li>PRP: Over 25 hairs/cm² more than placebo.</li>
+        </ul>
+    </div>
+
+    <div class="section" id="conclusion">
+        <h2>5. Conclusion</h2>
+        <p>Hair loss solutions have come a long way, offering effective treatments for managing and reversing hair loss. Consultation with a dermatologist or hair restoration specialist is essential to create a plan tailored to individual needs and goals. With the right approach, confidence and appearance can be restored.</p>
+    </div>
 </body>
 </html>
