--- a/treatment-options.html
+++ b/treatment-options.html
@@ -4,146 +4,184 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solutions for Hair Loss</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 20px;
-            padding: 0;
-            color: #333;
-        }
-        h1, h2, h3 {
-            color: #0056b3;
-        }
-        a {
-            color: #0056b3;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        .index {
-            margin-bottom: 20px;
-        }
-        .index ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        .index li {
-            margin: 5px 0;
-        }
-        .section {
-            margin-bottom: 40px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Solutions for Hair Loss: Exploring Evidence-Based Treatments</h1>
-
-    <p>Hair loss, while common, can be distressing. Fortunately, science offers a variety of solutions to slow, halt, or even reverse hair loss. These options range from medications to surgical procedures, each with its unique mechanisms, success rates, and potential side effects. Below, we delve into these solutions, backed by robust data and research.</p>
-
-    <div class="index">
-        <h2>Index</h2>
-        <ul>
-            <li><a href="#medications">1. Medications for Hair Loss</a></li>
-            <li><a href="#non-surgical">2. Non-Surgical Treatments</a></li>
-            <li><a href="#surgical">3. Surgical Options</a></li>
-            <li><a href="#placebo">4. Placebo Comparisons</a></li>
-            <li><a href="#conclusion">5. Conclusion</a></li>
-        </ul>
-    </div>
-
-    <div class="section" id="medications">
-        <h2>1. Medications for Hair Loss</h2>
-        <h3>A. Minoxidil</h3>
-        <p><strong>How It Works:</strong> Minoxidil is a vasodilator that improves blood flow to hair follicles, prolonging the hair’s growth (anagen) phase.</p>
-        <p><strong>Forms:</strong> Available in 2% and 5% solutions, applied topically to the scalp.</p>
-        <p><strong>Efficacy:</strong>
+    <header>
+        <nav>
             <ul>
-                <li>A <em>48-week clinical trial</em> with 393 men found 5% Minoxidil regrowth was 45% greater than with 2% and 2.6 times higher than with placebo.</li>
-                <li>A <em>1-year study</em> with 381 women reported increased hair density by 13 hairs/cm² with 2% Minoxidil.</li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="understanding-hair-loss.html">Understanding Hair Loss</a></li>
+                <li><a href="survey.html">Survey</a></li>
             </ul>
-        </p>
-        <p><strong>Side Effects:</strong>
+        </nav>
+        <h1>Solutions for Hair Loss: Exploring Evidence-Based Treatments</h1>
+    </header>
+
+    <main>
+        <section>
+            <p>Hair loss, while common, can be distressing. Fortunately, science offers a variety of solutions to slow, halt, or even reverse hair loss. These options range from medications to surgical procedures, each with its unique mechanisms, success rates, and potential side effects. Below, we delve into these solutions, backed by robust data and research.</p>
+        </section>
+
+        <section id="medications">
+            <h2>1. Medications for Hair Loss</h2>
+
+            <h3>A. Minoxidil</h3>
             <ul>
-                <li>Common: Scalp irritation, dryness, or itching.</li>
-                <li>Rare: Excessive facial hair growth (in women).</li>
-                <li>Initial shedding during early use, resolving within weeks.</li>
+                <li><strong>How It Works:</strong> Minoxidil is a vasodilator that improves blood flow to hair follicles, prolonging the hair’s growth (anagen) phase.</li>
+                <li><strong>Forms:</strong> Available in 2% and 5% solutions, applied topically to the scalp.</li>
+                <li><strong>Efficacy:</strong>
+                    <ul>
+                        <li>A <strong>48-week clinical trial</strong> with 393 men found:
+                            <ul>
+                                <li><strong>5% Minoxidil:</strong> Regrowth was <strong>45% greater</strong> than with 2% and <strong>2.6 times higher</strong> than with placebo.</li>
+                                <li><strong>Placebo Group:</strong> Minimal or no regrowth observed.</li>
+                            </ul>
+                        </li>
+                        <li>In women, a <strong>1-year study</strong> of 381 participants reported:
+                            <ul>
+                                <li><strong>2% Minoxidil:</strong> Increased hair density by <strong>13 hairs/cm²</strong>.</li>
+                                <li><strong>Placebo Group:</strong> No significant change.</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li><strong>Side Effects:</strong>
+                    <ul>
+                        <li>Common: Scalp irritation, dryness, or itching.</li>
+                        <li>Rare: Excessive facial hair growth (in women).</li>
+                        <li><strong>Initial Shedding:</strong> Temporary increased hair loss during early use, resolving within weeks.</li>
+                    </ul>
+                </li>
             </ul>
-        </p>
 
-        <h3>B. Finasteride</h3>
-        <p><strong>How It Works:</strong> Finasteride blocks 5-alpha reductase, reducing DHT, a key driver of follicular miniaturization.</p>
-        <p><strong>Efficacy:</strong>
+            <h3>B. Finasteride</h3>
             <ul>
-                <li>A <em>2-year trial</em> reported 83% of users maintained or increased hair density, gaining 182 hairs compared to placebo.</li>
+                <li><strong>How It Works:</strong> Finasteride blocks 5-alpha reductase, the enzyme converting testosterone to dihydrotestosterone (DHT), a key driver of follicular miniaturization in androgenetic alopecia.</li>
+                <li><strong>Efficacy:</strong>
+                    <ul>
+                        <li>A <strong>2-year trial</strong> with 1,553 men reported:
+                            <ul>
+                                <li><strong>Finasteride Group:</strong> 83% maintained or increased hair density. Hair counts increased by <strong>107 hairs in a 1-inch diameter circle</strong>.</li>
+                                <li><strong>Placebo Group:</strong> Hair counts decreased by <strong>75 hairs</strong>, showing net gains of 182 hairs with finasteride.</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li><strong>Side Effects:</strong>
+                    <ul>
+                        <li><strong>Sexual Dysfunction:</strong> Reported by <strong>3.8% of users</strong> versus <strong>2.1% in placebo groups</strong>. Includes decreased libido and erectile dysfunction.</li>
+                        <li>Rare: Depression or anxiety.</li>
+                        <li><strong>Post-Finasteride Syndrome:</strong> Persistent side effects after discontinuation (rare).</li>
+                    </ul>
+                </li>
             </ul>
-        </p>
-        <p><strong>Side Effects:</strong>
+
+            <h3>C. Dutasteride</h3>
             <ul>
-                <li>Sexual dysfunction reported by 3.8% of users versus 2.1% in placebo groups.</li>
-                <li>Rare: Depression or anxiety, post-finasteride syndrome.</li>
+                <li><strong>How It Works:</strong> Similar to finasteride but more potent, inhibiting both Type 1 and Type 2 forms of 5-alpha reductase.</li>
+                <li><strong>Efficacy:</strong>
+                    <ul>
+                        <li>A <strong>6-month study</strong> with 416 men compared dutasteride, finasteride, and placebo:
+                            <ul>
+                                <li><strong>Dutasteride Group:</strong> Hair counts increased by <strong>109 hairs</strong>.</li>
+                                <li><strong>Finasteride Group:</strong> Hair counts increased by <strong>75 hairs</strong>.</li>
+                                <li><strong>Placebo Group:</strong> Hair counts decreased by <strong>56 hairs</strong>, showing dutasteride’s superiority.</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li><strong>Side Effects:</strong>
+                    <ul>
+                        <li>Sexual dysfunction in <strong>3.9% of users</strong> compared to <strong>2.1% with placebo</strong>.</li>
+                        <li>More potent but not FDA-approved for hair loss (commonly used off-label).</li>
+                    </ul>
+                </li>
+                <li><strong>Research Links:</strong>
+                    <a href="https://ijdvl.com/superiority-of-dutasteride-over-finasteride-in-hair-regrowth-and-reversal-of-miniaturization-in-men-with-androgenetic-alopecia-a-randomized-controlled-open-label-evaluator-blinded-study/">Study on Dutasteride vs. Finasteride</a>
+                </li>
             </ul>
-        </p>
+        </section>
 
-        <h3>C. Dutasteride</h3>
-        <p><strong>How It Works:</strong> Dutasteride inhibits both Type 1 and Type 2 forms of 5-alpha reductase.</p>
-        <p><strong>Efficacy:</strong>
+        <section id="non-surgical">
+            <h2>2. Non-Surgical Treatments</h2>
+
+            <h3>A. Platelet-Rich Plasma (PRP)</h3>
             <ul>
-                <li>A <em>6-month study</em> found dutasteride increased hair counts by 109 hairs, outperforming finasteride and placebo.</li>
+                <li><strong>How It Works:</strong> PRP involves extracting the patient’s blood, isolating platelet-rich plasma, and injecting it into the scalp to stimulate follicle activity via growth factors.</li>
+                <li><strong>Procedure:</strong> Typically involves <strong>3–6 sessions over 3–6 months</strong>, followed by maintenance sessions every 6–12 months.</li>
+                <li><strong>Efficacy:</strong>
+                    <ul>
+                        <li>A meta-analysis of 12 studies reported a <strong>33.6 hairs/cm² increase</strong> in PRP-treated individuals compared to <strong>8.5 hairs/cm² in placebo groups</strong>.</li>
+                        <li>In a <strong>2019 trial</strong> comparing PRP to minoxidil:
+                            <ul>
+                                <li><strong>PRP:</strong> Increased hair count by <strong>29 hairs/cm²</strong>.</li>
+                                <li><strong>Minoxidil:</strong> Increased hair count by <strong>22 hairs/cm²</strong>.</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li><strong>Side Effects:</strong> Minimal, including mild swelling or discomfort at the injection site.</li>
             </ul>
-        </p>
-        <p><strong>Additional Research:</strong> A study in the <a href="https://ijdvl.com/superiority-of-dutasteride-over-finasteride-in-hair-regrowth-and-reversal-of-miniaturization-in-men-with-androgenetic-alopecia-a-randomized-controlled-open-label-evaluator-blinded-study/">Indian Journal of Dermatology</a> confirmed dutasteride's superiority over finasteride for hair regrowth in men.</p>
-        <p><strong>Side Effects:</strong> Similar to finasteride, with slightly higher incidence of sexual dysfunction.</p>
-    </div>
 
-    <div class="section" id="non-surgical">
-        <h2>2. Non-Surgical Treatments</h2>
-
-        <h3>A. Platelet-Rich Plasma (PRP)</h3>
-        <p><strong>How It Works:</strong> PRP involves extracting the patient’s blood, isolating platelet-rich plasma, and injecting it into the scalp to stimulate follicle activity via growth factors.</p>
-        <p><strong>Efficacy:</strong>
+            <h3>B. Low-Level Laser Therapy (LLLT)</h3>
             <ul>
-                <li>A meta-analysis reported a 33.6 hairs/cm² increase in PRP-treated individuals compared to 8.5 hairs/cm² in placebo groups.</li>
-                <li>A <a href="https://ijdvl.com/efficacy-of-platelet-rich-plasma-in-asians-with-androgenetic-alopecia-a-randomized-controlled-trial/">study in the Indian Journal of Dermatology</a> found significant increases in hair density for men but not for women.</li>
+                <li><strong>How It Works:</strong> Red light lasers stimulate follicles and enhance blood flow.</li>
+                <li><strong>Efficacy:</strong>
+                    <ul>
+                        <li>A <strong>16-week study</strong> reported a <strong>39% improvement in hair density</strong> in participants using LLLT devices.</li>
+                    </ul>
+                </li>
+                <li><strong>Limitations:</strong> Requires long-term commitment, with treatments <strong>2–3 times per week</strong>.</li>
             </ul>
-        </p>
-        <p><strong>Side Effects:</strong> Minimal, including mild swelling or discomfort at the injection site.</p>
+        </section>
 
-        <h3>B. Low-Level Laser Therapy (LLLT)</h3>
-        <p><strong>How It Works:</strong> Red light lasers stimulate follicles and enhance blood flow.</p>
-        <p><strong>Efficacy:</strong> A 16-week study reported a 39% improvement in hair density for LLLT users.</p>
-        <p><strong>Limitations:</strong> Requires long-term commitment with treatments 2–3 times per week.</p>
-    </div>
+        <section id="surgical">
+            <h2>3. Surgical Options</h2>
 
-    <div class="section" id="surgical">
-        <h2>3. Surgical Options</h2>
-
-        <h3>A. Hair Transplant Surgery</h3>
-        <p><strong>Methods:</strong>
+            <h3>A. Hair Transplant Surgery</h3>
             <ul>
-                <li>Follicular Unit Transplantation (FUT): Removes a strip of scalp for grafting.</li>
-                <li>Follicular Unit Extraction (FUE): Harvests individual follicles directly.</li>
+                <li><strong>Methods:</strong>
+                    <ul>
+                        <li><strong>Follicular Unit Transplantation (FUT):</strong> Removes a strip of scalp, dissects it into grafts, and transplants them.</li>
+                        <li><strong>Follicular Unit Extraction (FUE):</strong> Harvests individual follicles directly and transplants them.</li>
+                    </ul>
+                </li>
+                <li><strong>Efficacy:</strong>
+                    <ul>
+                        <li>Success rates range from <strong>90–95%</strong> depending on surgeon expertise and patient factors.</li>
+                        <li>Transplanted hair grows naturally and permanently.</li>
+                    </ul>
+                </li>
+                <li><strong>Side Effects:</strong>
+                    <ul>
+                        <li>FUT may leave scarring.</li>
+                        <li>Temporary shedding of transplanted hair (“shock loss”) occurs but resolves in 3–6 months.</li>
+                    </ul>
+                </li>
+                <li><strong>Cost:</strong> Ranges from <strong>₹1,00,000–₹3,00,000 ($1,500–$4,000)</strong> for 1,500–3,000 grafts in India.</li>
             </ul>
-        </p>
-        <p><strong>Efficacy:</strong> Success rates range from 90–95%, with natural and permanent hair growth.</p>
-        <p><strong>Cost:</strong> Ranges from ₹1,00,000–₹3,00,000 ($1,500–$4,000) for 1,500–3,000 grafts in India.</p>
-    </div>
 
-    <div class="section" id="placebo">
-        <h2>4. Placebo Comparisons</h2>
-        <p>All treatments significantly outperformed placebo, demonstrating their effectiveness in combating hair loss:</p>
-        <ul>
-            <li>Minoxidil: 2.6x better regrowth compared to placebo.</li>
-            <li>Finasteride: Net gain of 182 hairs versus placebo.</li>
-            <li>Dutasteride: Net gain of 165 hairs compared to placebo.</li>
-            <li>PRP: Over 25 hairs/cm² more than placebo.</li>
-        </ul>
-    </div>
+            <h3>B. PRP as a Complement</h3>
+            <p>Often used post-transplant to improve healing and graft survival.</p>
+        </section>
 
-    <div class="section" id="conclusion">
-        <h2>5. Conclusion</h2>
-        <p>Hair loss solutions have come a long way, offering effective treatments for managing and reversing hair loss. Consultation with a dermatologist or hair restoration specialist is essential to create a plan tailored to individual needs and goals. With the right approach, confidence and appearance can be restored.</p>
-    </div>
+        <section id="placebo-comparisons">
+            <h2>4. Placebo Comparisons</h2>
+            <p>In all treatments, placebo groups exhibited minimal to no improvement or slight declines in hair density, emphasizing the effectiveness of active treatments:</p>
+            <ul>
+                <li><strong>Minoxidil:</strong> Outperformed placebo by 2.6x in men and showed significant benefits for women.</li>
+                <li><strong>Finasteride:</strong> Net gain of 182 hairs compared to placebo.</li>
+                <li><strong>Dutasteride:</strong> Net gain of 165 hairs compared to placebo.</li>
+                <li><strong>PRP:</strong> Improved hair count by over 25 hairs/cm² more than placebo.</li>
+            </ul>
+        </section>
+
+        <section id="conclusion">
+            <h2>Conclusion</h2>
+            <p>Choosing the right hair loss treatment depends on the cause, severity, and personal preferences. Consult a dermatologist or hair specialist to explore your options and determine the most suitable approach for your needs. With advances in medical science, effective solutions are now within reach for many individuals.</p>
+        </section>
+    </main>
 </body>
 </html>
