--- a/treatment-options.html
+++ b/treatment-options.html
@@ -10,11 +10,9 @@
 <body>
     <header>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="understanding-hair-loss.html">Understanding Hair Loss</a></li>
-                <li><a href="survey.html">Survey</a></li>
-            </ul>
+            <a href="index.html">Home</a>
+            <a href="understanding-hair-loss.html">Understanding Hair Loss</a>
+            <a href="survey.html">Survey</a>
         </nav>
         <h1>Solutions for Hair Loss: Exploring Evidence-Based Treatments</h1>
     </header>
