--- a/treatment-options.html
+++ b/treatment-options.html
@@ -13,7 +13,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="understanding-hair-loss.html">Understanding Hair Loss</a>
-            <a href="survey.html">Survey</a>
+            <a href="https://forms.gle/4ybVou8CxfwVqzJB7" target="_blank">Take the Survey</a>
         </nav>
     </header>
 
