--- a/understanding-hair-loss.html
+++ b/understanding-hair-loss.html
@@ -15,7 +15,7 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="treatment-options.html">Treatment Options</a>
-                <a href="survey-link.html">Take the Survey</a>
+                <a href="https://forms.gle/4ybVou8CxfwVqzJB7" target="_blank">Take the Survey</a>
                 <a href="#causes">Causes</a>
                 <a href="#factors">Key Factors</a>
             </nav>
