--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <nav>
                 <a href="#understanding">Understanding Hair Loss</a>
                 <a href="#treatments">Treatment Options</a>
-                <a href="https://forms.gle/4ybVou8CxfwVqzJB7" target="_blank">Take the Survey</a>
+                <a href="https://forms.gle/EgD4AWqf8avBwpEQA" target="_blank">Take the Survey</a>
                 <a href="#method">Our Method</a>
             </nav>
         </div>
