hide hero section

--- a/understanding-hair-loss.html
+++ b/understanding-hair-loss.html
@@ -22,13 +22,13 @@
         </div>
     </header>
 
-    <!-- Hero Section -->
+    <!-- Hero Section
     <section class="hero" style="background-image: url('images/hair-loss-abstract.jpg'); background-size: cover; color: white; text-align: center; padding: 50px 0;">
         <div class="hero-text">
             <h2>The Causes of Hair Loss: A Deep Dive into Genetics, Hormones, and More</h2>
             <p>Explore the underlying reasons behind hair loss and its scientific explanations.</p>
         </div>
-    </section>
+    </section> -->
 
     <!-- Summary Section -->
     <section id="summary" class="content-section" style="padding: 40px 20px; background-color: #f2f2f2;">
